fix: resolve overflow issues

--- a/assets/src/js/admin/onboarding-wizard/components/wizard/style.scss
+++ b/assets/src/js/admin/onboarding-wizard/components/wizard/style.scss
@@ -1,8 +1,7 @@
 .give-obw {
-	min-height: 100%;
+	min-height: 100vh;
 	height: auto;
 	width: 100%;
-	overflow-x: hidden;
 
 	color: #424242;
 	font-family: Montserrat, arial, sans-serif;
